# PerfRide

./: .gitignore  .mcp.json  ARCHITECTURE.md  CLAUDE.md  README.md  deploy.sh.example  docker-compose.yml.example  strava-webhook.sh
.claude/: settings.json
.codex/: AGENTS.md  config.toml
.playwright-mcp/: page-2026-04-13T21-42-25-627Z.yml
agent/: Dockerfile  pyproject.toml
agent/knowledge/: dynamic_fitness.md  fatigue_models.md  periodization.md  power_zones.md  sequencing_examples.md  workout_templates.md
agent/src/mywhoosh/: client.py  config.py  converter.py
agent/src/recommend_agent/: agent.py  constants.py  gcs.py  main.py  plan_store.py  planner.py  weekly_logic.py
agent/src/recommend_agent/prompts/: insight_prompt.md  system_prompt.md  system_prompt_generic.md  webhook_prompt.md  weekly_plan_prompt.md
agent/src/recommend_agent/tools/: _request_context.py  build_and_register_workout.py  detect_signals.py  explore_outdoor_routes.py  get_current_fitness.py  get_expert_knowledge.py  get_recent_activities.py  get_training_plan.py  get_user_profile.py  get_weather_forecast.py  search_latest_knowledge.py  send_notification.py  update_training_plan.py
agent/src/zwift/: config.py  deployer.py  zwo_generator.py  zwo_templates.py
agent/tests/: test_cache_logic.py  test_detect_signals.py  test_gcs.py  test_plan_store.py  test_recommend_as_of.py  test_recommend_coach_daily.py  test_summarize_recent_rides.py  test_tools.py  test_update_training_plan.py  test_weekly_plan_endpoint.py  test_weekly_plan_respond.py  test_weekly_planner.py  test_zwift_module.py
(+151 files in other folders)
